--- a/src/css/global.css
+++ b/src/css/global.css
@@ -14,36 +14,44 @@ input, button, textarea, :focus {
 /* disable image and anchor dragging */
 a:not([draggable=true]), img:not([draggable=true]) {
     -webkit-user-drag: none;
-    user-drag: none;
 }
 a[href^="http://"],
 a[href^="https://"],
 a[href^="ftp://"] {
     -webkit-user-drag: auto;
-    user-drag: auto;
 }
 
 body {
     margin: 0;
+    -webkit-font-smoothing: none;
 }
 
-/* .window {
-    height: 100vh;
-} */
+.window {
+    height: 96vh;
+}
+
+.title-bar {
+    -webkit-app-region: drag;
+}
 
 #minimiseWindow {
     background-image: url("../icon/minimize.svg") !important;
+    -webkit-app-region: no-drag;
 }
 
 #maximiseWindow {
     background-image: url("../icon/maximize.svg") !important;
     margin-left: 1px !important;
+    -webkit-app-region: no-drag;
 }
 
 #closeWindow {
     background-image: url("../icon/close.svg") !important;
     margin-left: 1px !important;
+    -webkit-app-region: no-drag;
 }
+
+/* Change scrollbar background and button icons */
 
 ::-webkit-scrollbar-track {
     background-image: url("../icon/scrollbar-background.svg") !important;
@@ -63,4 +71,10 @@ body {
 
 ::-webkit-scrollbar-button:horizontal:end {
     background-image: url("../icon/button-right.svg") !important;
+}
+
+/* Change checkbox icons */
+
+input[type="checkbox"]:checked + label::after {
+    background: url("../icon/checkmark.svg") !important;
 }
