Added app icon placeholder

--- a/src/frames/frames-styles.css
+++ b/src/frames/frames-styles.css
@@ -12,6 +12,8 @@
 
 html {
   user-select: none;
+  cursor: url("../bin/images/Cursor79.png"), auto !important;
+  -webkit-font-smoothing: none !important;
 }
 
 h1 {
