--- a/src/frames/frames-styles.css
+++ b/src/frames/frames-styles.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "MondwestReg";
-  src: url("../bin/fonts/Mondwest/Mondwest-Regular.otf") format("truetype");
+  src: url("../bin/fonts/Mondwest/Mondwest-Regular.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "MondwestBld";
-  src: url("../bin/fonts/Mondwest/Mondwest-Bold.otf") format("truetype");
+  src: url("../bin/fonts/Mondwest/Mondwest-Bold.woff2") format("woff2");
 }
 
 @font-face {
