--- a/src/frames/frames-styles.css
+++ b/src/frames/frames-styles.css
@@ -123,25 +123,27 @@ html {
 }
 
 body {
-  padding: 4px;
+  padding: 6px;
   -webkit-font-smoothing: none;
-  zoom: 200%;
+  /* zoom: 200%; */
   margin: 0;
 }
 
 h1 {
   font-family: "MondwestBld";
   font-weight: 400;
-  font-size: 22px;
+  font-size: 38px;
   padding-top: 0;
   margin-top: 0;
   padding-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 6px;
 }
 
 div {
   font-family: "MondwestReg";
   font-weight: 400;
-  font-size: 10px;
+  font-size: 18px;
   line-height: 1.2;
   margin-top: 0;
   padding-bottom: 10px;
@@ -159,7 +161,7 @@ div {
   animation-play-state: running;
   animation-name: Typewriter-cursor; */
   font-family: "Iosevka Web";
-  font-size: 8px;
+  font-size: 16px;
 }
 
 h1 .Typewriter__cursor {
