--- a/src/frames/frames-styles.css
+++ b/src/frames/frames-styles.css
@@ -132,18 +132,19 @@ body {
 h1 {
   font-family: "MondwestBld";
   font-weight: 400;
-  font-size: 38px;
+  font-size: 40px;
   padding-top: 0;
   margin-top: 0;
   padding-top: 0;
   margin-bottom: 0;
-  padding-bottom: 6px;
+  padding-bottom: 10px;
 }
 
 div {
   font-family: "MondwestReg";
   font-weight: 400;
-  font-size: 18px;
+  /* font-size: 36px; */
+  font-size: 20px;
   line-height: 1.2;
   margin-top: 0;
   padding-bottom: 10px;
