Starting to come up with a story

--- a/src/css/licensesplash.css
+++ b/src/css/licensesplash.css
@@ -16,6 +16,7 @@
 html,
 body {
   height: 100%;
+  background: rgb(0, 0, 0);
 }
 
 body {
@@ -31,7 +32,7 @@ body {
   margin-left: -260px;
   text-align: left;
   animation: 900s licenseroll linear infinite;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.2);
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -48,16 +49,19 @@ pre {
 h1,
 h2 {
   font-family: "Web437";
+  color: #00ff00;
 }
 
 h3,
 p {
   font-family: "Web437-wide";
+  color: #00ff00;
 }
 
 code,
 code * {
   font-family: "Web437-narrow";
+  color: #00ff00;
 }
 
 @keyframes licenseroll {
