--- a/src/frames/frames-styles.css
+++ b/src/frames/frames-styles.css
@@ -152,6 +152,15 @@ li {
   padding-bottom: 10px;
 }
 
+p {
+  font-family: "MondwestReg";
+  font-weight: 400;
+  /* font-size: 36px; */
+  font-size: 20px;
+  line-height: 1.2;
+  margin-top: 0;
+}
+
 .Typewriter__cursor {
   /* animation: none !important; */
   /* animation: Typewriter-cursor 1s infinite; */
