--- a/src/css/aboutModal.css
+++ b/src/css/aboutModal.css
@@ -3,8 +3,34 @@ body {
 }
 
 .window {
-  width: 406px;
-  height: 280px;
+  width: 446px;
+  height: 226px;
   /* min-height: auto; */
   overflow: hidden;
+}
+
+#aMod-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+aMod-logo {
+  width: 30px;
+  height: 30px;
+}
+
+#aMod-content {
+  padding-left: 14px;
+  margin-top: 0;
+  padding-top: 0;
+}
+
+#aMod-content-el1 {
+  margin-top: 1px;
+}
+
+p {
+  line-height: 1.2;
+  margin: 8px 0;
 }
