--- a/src/css/licensesplash.css
+++ b/src/css/licensesplash.css
@@ -24,6 +24,29 @@ body {
   user-select: none;
 }
 
+.instructions {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 28px;
+  z-index: 10;
+  background: rgb(0, 0, 255);
+}
+
+.instructions span {
+  width: 100%;
+  font-size: 16px;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  font-family: "Web437";
+  margin: 0;
+  position: absolute;
+  top: 56%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .license-container {
   position: absolute;
   top: 100%;
@@ -50,12 +73,14 @@ h1,
 h2 {
   font-family: "Web437";
   color: #00ff00;
+  font-weight: normal;
 }
 
 h3,
 p {
   font-family: "Web437-wide";
   color: #00ff00;
+  font-weight: normal;
 }
 
 code,
@@ -72,4 +97,8 @@ code * {
     /* Increase (or decrease, since it's negative) this number to adapt to longer license */
     top: -18000%;
   }
+}
+
+a {
+  
 }
