--- a/src/css/crcModal.css
+++ b/src/css/crcModal.css
@@ -4,7 +4,11 @@ body {
 
 .window {
   width: 314px;
-  height: 140px;
+  height: 144px;
   /* min-height: auto; */
   overflow: hidden;
+}
+
+.window-body p {
+  line-height: 1.2;
 }
