--- a/src/css/aboutModal.css
+++ b/src/css/aboutModal.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: "Iosevka Web";
+  font-display: swap;
+  font-weight: 400;
+  font-stretch: normal;
+  font-style: normal;
+  src: url("../bin/fonts/Iosevka/iosevka-regular.woff2") format("woff2"),
+    url("../bin/fonts/Iosevka/iosevka-regular.ttf") format("truetype");
+}
+
 body {
   overflow: hidden;
 }
