--- a/src/frames/frames-styles.css
+++ b/src/frames/frames-styles.css
@@ -190,3 +190,16 @@ h1 .Typewriter__cursor {
   font-family: "Iosevka Web";
   font-size: 20px;
 }
+
+#typ-outro {
+  padding-bottom: 16px;
+  margin-bottom: 16px;
+}
+
+#typ-indicator {
+  height: 16pt;
+  position: fixed;
+  bottom: 0;
+  /* margin-top: 16px;
+  padding-top: 16px; */
+}
