--- a/src/css/licensesplash.css
+++ b/src/css/licensesplash.css
@@ -17,6 +17,7 @@ html,
 body {
   height: 100%;
   background: rgb(0, 0, 0);
+  /* background: rgb(240, 240, 240); */
 }
 
 body {
@@ -51,8 +52,10 @@ body {
   position: absolute;
   top: 100%;
   left: 50%;
-  width: 640px;
-  margin-left: -330px;
+  /* width: 640px;
+  margin-left: -330px; */
+  width: 540px;
+  margin-left: -280px;
   text-align: left;
   animation: 300s licenseroll linear infinite;
   background: rgba(0, 0, 0, 0.2);
@@ -69,24 +72,39 @@ pre {
   word-wrap: break-word;
 }
 
-h1,
+h1 {
+  font-family: "Web437";
+  color: #00ff00;
+  font-weight: normal;
+  font-size: 32pt;
+}
+
 h2 {
   font-family: "Web437";
   color: #00ff00;
   font-weight: normal;
+  font-size: 20pt;
 }
 
-h3,
+h3 {
+  font-family: "Web437-wide";
+  color: #00ff00;
+  font-weight: normal;
+  font-size: 16pt;
+}
+
 p {
   font-family: "Web437-wide";
   color: #00ff00;
   font-weight: normal;
+  font-size: 10pt;
 }
 
 code,
 code * {
   font-family: "Web437-narrow";
   color: #00ff00;
+  font-size: 10pt;
 }
 
 @keyframes licenseroll {
@@ -95,7 +113,7 @@ code * {
   }
   100% {
     /* Increase (or decrease, since it's negative) this number to adapt to longer license */
-    top: -9300%;
+    top: -8550%;
   }
 }
 
