--- a/src/frames/frames-styles.css
+++ b/src/frames/frames-styles.css
@@ -143,7 +143,7 @@ h1 {
 div,
 a,
 li {
-  font-family: "MondwestReg";
+  font-family: "MondwestReg", serif;
   font-weight: 400;
   /* font-size: 36px; */
   font-size: 20px;
@@ -153,7 +153,7 @@ li {
 }
 
 p {
-  font-family: "MondwestReg";
+  font-family: "MondwestReg", serif;
   font-weight: 400;
   /* font-size: 36px; */
   font-size: 20px;
